# rust-python-demo

./: .pre-commit-config.yaml  Cargo.toml  Makefile  README.md  benchmark.py  example.py  pyproject.toml
python/rust_calculator/: __init__.py
python/tests/: test_all.py
src/: lib.rs
